# atomupd-daemon

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  README.md  config.h.in  meson.build  meson_options.txt
atomupd-daemon/: atomupd-daemon.c  atomupd-daemon.h  atomupd-manager.c  atomupd.service.in  au-atomupd1-impl.c  au-atomupd1-impl.h  com.steampowered.Atomupd1.conf  com.steampowered.Atomupd1.policy  com.steampowered.Atomupd1.rules.in  com.steampowered.Atomupd1.service.in  com.steampowered.Atomupd1.xml  main.c  meson.build  utils.c  utils.h
ci/: dbus_system.conf
completion/: atomupd-manager  meson.build
tests/: au-atomupd1-impl.c  fixture.c  fixture.h  impl.c  manager.c  meson.build  mock-defines.h  mock-rauc-service.c  mock-steamos-atomupd-client.c  mock-systemctl-show.c  services.c  services.h  tests-utils.c  tests-utils.h  utils.c
tests/data/: client.conf  client_empty_variant.conf  client_empty_variants.conf  client_invalid_variant.conf  client_invalid_variants_and_branches.conf  client_no_branches.conf  client_no_images.conf  client_no_meta.conf  client_no_variants.conf  client_no_variants_empty_branches.conf  client_one_variant.conf  client_semicolon.conf  client_two_variants.conf  manifest.json  manifest_invalid.json  manifest_no_variant.json  manifest_steamdeck.json  manifest_steamtest.json  manifest_steamtest_missing_branch.json  update_eol_variant.json  update_mock_infinite.json  update_one_minor.json  update_three_minors.json  update_two_minors_two_majors.json
tests/data/client_meta/meta/holo/steamos/amd64/steamdeck/: builds.json  remote-info.conf
tests/data/client_meta/meta/holo/steamos/amd64/steamtest/: builds.json
tests/data/extra_fields_meta/meta/holo/steamos/amd64/steamdeck/: remote-info.conf
