# Copyright © 2022 Collabora Ltd.
# SPDX-License-Identifier: MIT

option(
  'install_tests',
  type : 'boolean',
  value : false,
  description : 'Install automated tests',
)

option(
  'systemdsystemunitdir',
  type : 'string',
  value : '',
  description : 'Directory for systemd unit files',
)

option(
  'using_valgrind',
  type : 'boolean',
  value : false,
  description : 'Set to \'true\' if the tests are executed under valgrind',
)

option(
  'atomupd1_bus_name',
  type : 'string',
  value : 'com.steampowered.Atomupd1',
  description : 'Bus name of the Atomupd1 API',
)

option(
  'atomupd1_path',
  type : 'string',
  value : '/com/steampowered/Atomupd1',
  description : 'Path of the Atomupd1 API',
)
